"refactor: bookscore 리팩토링 "